fix spacing

--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 .container {
-  width: 510px;
-  height: 500px;
-
+  width: 560px;
   display: flex;
+  flex-wrap: wrap;
+  margin: auto;
   border: 1px solid black;
 }
 
 .gridRow {
   display: flex;
-  flex-direction: column;
-  flex: 1 0 auto;
+  width: 100%;
 }
 
 .cells {
   width: 30px;
   height: 30px;
   border: 1px solid gray;
+  width: 100%;
 }
